# arches-toolkit

./: .gitignore  PLAN.md  README.md  TASKS.md  UPGRADE_NOTES.md
cli/: README.md  pyproject.toml
cli/src/arches_toolkit/: __init__.py  _constants.py  _util.py  apps_manifest.py  main.py  patches.py  scaffold.py
cli/src/arches_toolkit/_data/: .dockerignore  Dockerfile  compose.arches-src.yaml  compose.dev.yaml  compose.yaml  init.sql
cli/src/arches_toolkit/_data/templates/7.6/app/: README.md.tmpl  pyproject.toml.tmpl
cli/src/arches_toolkit/_data/templates/7.6/app/arches_${name}/: apps.py.tmpl  settings.py.tmpl  urls.py.tmpl  views.py.tmpl
cli/src/arches_toolkit/_data/templates/7.6/datatype/datatypes/: ${name}.py.tmpl
cli/src/arches_toolkit/_data/templates/7.6/function/functions/: ${name}.py.tmpl
cli/src/arches_toolkit/_data/templates/7.6/report/reports/: ${name}.json.tmpl
cli/src/arches_toolkit/_data/templates/7.6/search-filter/search_components/: ${name}.py.tmpl
cli/src/arches_toolkit/_data/templates/7.6/widget/widgets/: ${name}.json.tmpl
cli/src/arches_toolkit/_data/templates/8.1/app/: pyproject.toml.tmpl
cli/src/arches_toolkit/_data/templates/8.1/app/arches_${name}/: __init__.py.tmpl
cli/src/arches_toolkit/commands/: __init__.py  add_app.py  bootstrap.py  compose_wrappers.py  create.py  dev.py  init.py  migrate.py  patch.py  setup_db.py  sync_apps.py
cli/tests/: test_apps_manifest.py  test_create_app.py  test_dev_arches_src.py  test_patches.py  test_scaffold.py  test_sync_apps.py
docs/: compose-deep-dive.md  compose-extras.md  create.md  (+6 more)
(+41 files in other folders)
